...
    menuTitle: "menuTittleTranslate",
    menuDescription: "menuDescriptionTranslate",
    menuItems: [
      /* ================= MAIN TABS ================= */
      {
        path: MAIN_PATH,
        code: "COMMUNITY"
      },
      {
        path: COMMUNITY_PATH,
        icon: ({ color, focused }) => (
          <TabIcon
            icon={
...
              color={color}
              translateCode='search'
              focused={focused}
            />
          </Protected>
        ),
        code: "SEARCH",
        translateCode: "search",
        includeInMainTab: {
          position: 2
        }
      },
      {
...
