{
  "title": "Follow",
  "follower": {
    "title": "Followers",
    "searchPlaceHolder": "Search followers"
  },
  "following": {
    "title": "Followings",
    "searchPlaceHolder": "Search followings"
  }
}
