{
  "header": {
    "user": "Tìm kiếm người dùng",
    "recipe": "Tìm kiếm công thức",
    "filter": "Lọc"
  },
  "searchResultTitle": {
    "recipe": "Công thức",
    "user": "Người dùng",
    "ingredient": "Nguyên liệu"
  },
  "placeholder": {
    "user": "Nhập tên người dùng hoặc tên hiển thị...",
    "recipe": "Nhập tên công thức...",
    "filter": "Nhập nguyên liệu..."
  },
  "filter": {
    "title": "Hiện công thức với:",
    "action": "Xong"
  },
  "notFound": "Không tìm thấy kết quả!",
  "addNew": "Thêm mới nhãn này",
  "tagAdded": "Nhãn đã được thêm",
  "requiredTag": "Vui lòng chọn một nhãn",
  "follow": "Theo dõi",
  "unfollow": "Bỏ theo dõi",
  "followUnfollowError": "Đã xảy ra lỗi, vui lòng thử lại sau",
  "deleteHistoryFail": "Xoá lịch sử thất bại, vui lòng thử lại sau"
}
