{
  "follow": "Follow",
  "unfollow": "Unfollow",
  "update": "Update",
  "follower": "follower",
  "followers": "followers",
  "followUnfollowError": "Something went wrong, please try later",
  "comments": "Comments",
  "recipe": "recipe",
  "recipes": "recipes"
}
