{
  "community": "Community",
  "search": "Search",
  "capture": "",
  "notification": "Notification",
  "menu": "Menu"
}
