...
import { lazy, object, ref, string } from "yup";

export const EMAIL_REGEX = /[@]/;
export const PHONE_REGEX = /^0(3|5|7|8|9)+([0-9]{8})$/;

export const passwordSchema = string()
  .required("Please enter password.")
  .min(6, "Password must be at least 6 characters long.")
  .matches(/[A-Z]/, "Password must contain at least one uppercase letter.")
  .matches(/[a-z]/, "Password must contain at least one lowercase letter.")
  .matches(/\d/, "Password must contain at least one digit.")
  .matches(/[^A-Za-z0-9]/, "Password must contain at least one special character.");

export const loginSchema = object({
  identifier: string().required("Please enter email or phone number."),
  password: string().required("Please enter password.")
});

export const forgotPasswordSchema = object({
  identifier: lazy(value => {
    const phoneNumberRegex = /^\d+$/;
...
