{
  "community": "Cộng Đồng",
  "search": "Tìm Kiếm",
  "capture": "",
  "notification": "Thông Báo",
  "menu": "Menu"
}

