appId: com.tastopia.app
onFlowStart:
  - runFlow:
      file: ../common/login.yaml
      env:
        TEST_NAME: "search-user"
onFlowComplete:
  - runFlow: ../common/logout.yaml
---
- tapOn:
    id: "SEARCH"
- tapOn:
    id: "search-mode-toggle-button"
- tapOn:
    id: "search-user-input"
- inputText: "a"
- hideKeyboard
- assertVisible:
    id: "search-user-follow-button"
- tapOn:
    id: "search-user-follow-button"
    index: 0
- assertVisible: "Unfollow"
- tapOn:
    id: "search-user-follow-button"
    index: 0
- assertVisible: "Follow"
