# maestro test ./maestro/search.yaml
appId: host.exp.exponent
---
- runFlow:
    file: ./expo/init-android.yml
    when:
      platform: "Android"

- runFlow:
    file: ./expo/init-ios.yml
    when:
      platform: "iOS"

# - assertVisible: "Tìm Kiếm"
- tapOn: "Tìm Kiếm"
- tapOn: "Enter name or username"
- inputText: "a"
- assertVisible: "Follow"
- tapOn:
    text: "Follow"
    repeat: 3
    delay: 500
- scroll
- scroll
- scroll
- scroll
- scroll
- scroll
- scroll
- scroll
# - assertVisible: "Unfollow"
